RESOLVED FIXED294091
[visionOS] requestFullscreen() may show the wrong panoramic image
https://bugs.webkit.org/show_bug.cgi?id=294091
Summary [visionOS] requestFullscreen() may show the wrong panoramic image
Yoel Hawa
Reported 2025-06-05 14:52:11 PDT
[visionOS] requestFullscreen() may show the wrong panoramic image
Attachments
Yoel Hawa
Comment 1 2025-06-05 15:07:03 PDT
Yoel Hawa
Comment 2 2025-06-05 15:24:02 PDT
EWS
Comment 3 2025-06-06 13:55:12 PDT
Committed 295937@main (d53fd76c465a): <https://commits.webkit.org/295937@main> Reviewed commits have been landed. Closing PR #46388 and removing active labels.
EWS
Comment 4 2025-06-09 23:42:51 PDT
Committed 289651.564@safari-7621-branch (f12ea3760616): <https://commits.webkit.org/289651.564@safari-7621-branch> Reviewed commits have been landed. Closing PR #3154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.