[visionOS] requestFullscreen() may show the wrong panoramic image https://bugs.webkit.org/show_bug.cgi?id=294091 <rdar://152184462>

Reviewed by Andy Estes.

Fixes 2 bugs: ensure that image sources changes are only sent to Quick
Look if that image is in fullscreen, and ensure that the largest source
continues to get selected for fullscreen when delegating to Quick Look.

* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::updateImageSource):
Stop sending image source updates to Quick Look if the image whose
source changes isn't the one in fullscreen.
(WebKit::WebFullScreenManager::enterFullScreenForElement):
(WebKit::WebFullScreenManager::didEnterFullScreen):
Move logic to force larger image sources from
WebFullScreenManager::didEnterFullScreen to
WebFullScreenManager::enterFullScreenForElement, since the former may
not be run in time anymore.

Canonical link: https://commits.webkit.org/295937@main